...
import Foundation

final class MealListsViewModel: MealListViewModelProtocol {

    weak var user: AppUser?

    internal let title = "My Calories Logger"

    internal var meals: [Meal] = []
    internal var daysList: [String] = []
    internal var caloriesPerDay: [String: Int] = [:]
    internal var mealsPerDay: Dynamic<[String: [Meal]]> = Dynamic([:])

...
